Fixed: Human NPCs calling too many guards when they see an criminal/murderer.
Fixed: Guard NPCs walking too far away from the location where they got called.
Changed: Char trigger @PetDesert now will be called when the pet get released in any situation instead only when it got starving or attacked by its master.

08-01-2020, Coruja
Fixed: Item pickup setting TARGP/TARGPRV char properties even when pickup fail.
[sphere_backward_compatibility.scp]: Updated 'addnpc' and 'static' functions to support amount as 2nd argument (eg: '.addnpc c_pig 5' will create 5 pigs)
[sphere_spells.scp]: Fixed wrong LOCAL.FieldWidth value on field spells
[sphere_msgs.scp]: Updated message list with the following changes
	-Removed: npc_pet_deserted, party_add_too_fast, hl_one_client
	-Updated: magery_5, msg_frozen
	-Fixed typo: forensics_carbedby -> forensics_carvedby

12-01-2020, Coruja
Fixed: Rubberband effect while casting spells when MAGICF_FREEZEONCAST magic flag is enabled on sphere.ini
[sphere_defs.scp]: Added new char flag 'statf_freezecast' to make the char unable to walk while casting spells (used by MAGICF_FREEZEONCAST magic flag on sphere.ini)
[sphere_dialog.scp]: Added support for 'statf_freezecast' char flag on character properties dialog

13-01-2020, Coruja
Added: 64bit architecture support on Sphere
	-32bit/64bit builds are compiled separately but are compatible with each other and share the same source code / script pack
	-NOTE: To switch between 32bit/64bit build you must also switch MySQL client library to the version compatible with selected arch
		-Windows: replace 'libmysql.dll' file with the version included on downloaded zip
		-Linux: replace MySQL package (Ubuntu: 'libmysqlclient20' to 64bit or 'libmysqlclient20:i386' to 32bit / CentOS: 'mysql-community-libs' to 64bit or 'mysql-community-libs.i686' to 32bit)

17-01-2020, Coruja
Added: New EMOTECOLOR char property (read-only) to store emote color received from client (':+space' client shortcut)