@@ -294,14 +294,14 @@ void CSector::r_Write()
 	// Items on ground
 	for ( CItem *pItem = static_cast<CItem *>(m_Items_Timer.GetHead()); pItem != NULL; pItem = pItem->GetNext() )
 	{
-		if ( pItem->IsType(IT_MULTI_CUSTOM) )
+		if ( pItem->IsTypeMulti() )
 			pItem->r_WriteSafe(g_World.m_FileMultis);
 		else if ( !pItem->IsAttr(ATTR_STATIC) )
 			pItem->r_WriteSafe(g_World.m_FileWorld);
 	}
 	for ( CItem *pItem = static_cast<CItem *>(m_Items_Inert.GetHead()); pItem != NULL; pItem = pItem->GetNext() )
 	{
-		if ( pItem->IsType(IT_MULTI_CUSTOM) )
+		if ( pItem->IsTypeMulti() )
 			pItem->r_WriteSafe(g_World.m_FileMultis);
 		else if ( !pItem->IsAttr(ATTR_STATIC) )
 			pItem->r_WriteSafe(g_World.m_FileWorld);
